<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recipe">

    <TextView
        android:id="@+id/txtTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="38dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="244dp"
        android:layout_height="60dp"
        android:text="@string/txtIngredients"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="154dp" />

    <TextView
        android:id="@+id/txtItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtitem1"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="234dp" />

    <TextView
        android:id="@+id/txtItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtitem2"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="279dp" />

    <TextView
        android:id="@+id/txtItem3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtitem3"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="325dp" />

    <TextView
        android:id="@+id/txtItem4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtitem3"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="369dp" />

    <EditText
        android:id="@+id/txtDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtDirections"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="452dp" />

    <EditText
        android:id="@+id/txtMix"
        android:layout_width="401dp"
        android:layout_height="121dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/txtMix"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="529dp" />

</androidx.constraintlayout.widget.ConstraintLayout>